avatar and scroll edited

--- a/leaderboard/index.html
+++ b/leaderboard/index.html
@@ -49,9 +49,9 @@
                     <td data-label="Username">
                         <div class="username-container">
                             <!-- for image -->
-                            <!-- <div class="image-container">
+                            <div class="image-container">
                                 <img src="/images/lee.jpg" alt="user image">
-                            </div> -->
+                            </div>
                             <!-- for username -->
                             <div class="username">
                                 <p>Lee</p>
@@ -98,9 +98,9 @@
                     <td>
                         <div class="username-container">
                             <!-- for image -->
-                            <!-- <div class="image-container">
+                            <div class="image-container">
                                 <img src="/images/lee.jpg" alt="user image">
-                            </div> -->
+                            </div>
                             <!-- for username -->
                             <div class="username">
                                 <p>Lee</p>
@@ -145,9 +145,9 @@
                     <td>
                         <div class="username-container">
                             <!-- for image -->
-                            <!-- <div class="image-container">
+                            <div class="image-container">
                                 <img src="/images/lee.jpg" alt="user image">
-                            </div> -->
+                            </div>
                             <!-- for username -->
                             <div class="username">
                                 <p>Lee</p>
@@ -193,9 +193,9 @@
                     <td>
                         <div class="username-container">
                             <!-- for image -->
-                            <!-- <div class="image-container">
+                            <div class="image-container">
                                 <img src="/images/lee.jpg" alt="user image">
-                            </div> -->
+                            </div>
                             <!-- for username -->
                             <div class="username">
                                 <p>Lee</p>
@@ -239,9 +239,9 @@
                     <td>
                         <div class="username-container">
                             <!-- for image -->
-                            <!-- <div class="image-container">
+                            <div class="image-container">
                                 <img src="/images/lee.jpg" alt="user image">
-                            </div> -->
+                            </div>
                             <!-- for username -->
                             <div class="username">
                                 <p>Lee</p>
@@ -286,9 +286,9 @@
                     <td>
                         <div class="username-container">
                             <!-- for image -->
-                            <!-- <div class="image-container">
+                            <div class="image-container">
                                 <img src="/images/lee.jpg" alt="user image">
-                            </div> -->
+                            </div>
                             <!-- for username -->
                             <div class="username">
                                 <p>Lee</p>
@@ -333,9 +333,9 @@
                     <td>
                         <div class="username-container">
                             <!-- for image -->
-                            <!-- <div class="image-container">
+                            <div class="image-container">
                                 <img src="/images/lee.jpg" alt="user image">
-                            </div> -->
+                            </div>
                             <!-- for username -->
                             <div class="username">
                                 <p>Lee</p>
@@ -380,9 +380,9 @@
                     <td>
                         <div class="username-container">
                             <!-- for image -->
-                            <!-- <div class="image-container">
+                            <div class="image-container">
                                 <img src="/images/lee.jpg" alt="user image">
-                            </div> -->
+                            </div>
                             <!-- for username -->
                             <div class="username">
                                 <p>Lee</p>
@@ -427,9 +427,9 @@
                     <td>
                         <div class="username-container">
                             <!-- for image -->
-                            <!-- <div class="image-container">
+                            <div class="image-container">
                                 <img src="/images/lee.jpg" alt="user image">
-                            </div> -->
+                            </div>
                             <!-- for username -->
                             <div class="username">
                                 <p>Lee</p>
@@ -474,9 +474,9 @@
                     <td>
                         <div class="username-container">
                             <!-- for image -->
-                            <!-- <div class="image-container">
+                            <div class="image-container">
                                 <img src="/images/lee.jpg" alt="user image">
-                            </div> -->
+                            </div>
                             <!-- for username -->
                             <div class="username">
                                 <p>Lee</p>
@@ -521,9 +521,9 @@
                     <td>
                         <div class="username-container">
                             <!-- for image -->
-                            <!-- <div class="image-container">
+                            <div class="image-container">
                                 <img src="/images/lee.jpg" alt="user image">
-                            </div> -->
+                            </div>
                             <!-- for username -->
                             <div class="username">
                                 <p>Lee</p>
@@ -568,9 +568,9 @@
                     <td>
                         <div class="username-container">
                             <!-- for image -->
-                            <!-- <div class="image-container">
+                            <div class="image-container">
                                 <img src="/images/lee.jpg" alt="user image">
-                            </div> -->
+                            </div>
                             <!-- for username -->
                             <div class="username">
                                 <p>Lee</p>
@@ -615,9 +615,9 @@
                     <td>
                         <div class="username-container">
                             <!-- for image -->
-                            <!-- <div class="image-container">
+                            <div class="image-container">
                                 <img src="/images/lee.jpg" alt="user image">
-                            </div> -->
+                            </div>
                             <!-- for username -->
                             <div class="username">
                                 <p>Lee</p>
@@ -662,9 +662,9 @@
                     <td>
                         <div class="username-container">
                             <!-- for image -->
-                            <!-- <div class="image-container">
+                            <div class="image-container">
                                 <img src="/images/lee.jpg" alt="user image">
-                            </div> -->
+                            </div>
                             <!-- for username -->
                             <div class="username">
                                 <p>Lee</p>
@@ -709,9 +709,9 @@
                     <td>
                         <div class="username-container">
                             <!-- for image -->
-                            <!-- <div class="image-container">
+                            <div class="image-container">
                                 <img src="/images/lee.jpg" alt="user image">
-                            </div> -->
+                            </div>
                             <!-- for username -->
                             <div class="username">
                                 <p>Lee</p>
@@ -756,9 +756,9 @@
                     <td>
                         <div class="username-container">
                             <!-- for image -->
-                            <!-- <div class="image-container">
+                            <div class="image-container">
                                 <img src="/images/lee.jpg" alt="user image">
-                            </div> -->
+                            </div>
                             <!-- for username -->
                             <div class="username">
                                 <p>Lee</p>
@@ -803,9 +803,9 @@
                     <td>
                         <div class="username-container">
                             <!-- for image -->
-                            <!-- <div class="image-container">
+                            <div class="image-container">
                                 <img src="/images/lee.jpg" alt="user image">
-                            </div> -->
+                            </div>
                             <!-- for username -->
                             <div class="username">
                                 <p>Lee</p>
@@ -850,9 +850,9 @@
                     <td>
                         <div class="username-container">
                             <!-- for image -->
-                            <!-- <div class="image-container">
+                            <div class="image-container">
                                 <img src="/images/lee.jpg" alt="user image">
-                            </div> -->
+                            </div>
                             <!-- for username -->
                             <div class="username">
                                 <p>Lee</p>
@@ -897,9 +897,9 @@
                     <td>
                         <div class="username-container">
                             <!-- for image -->
-                            <!-- <div class="image-container">
+                            <div class="image-container">
                                 <img src="/images/lee.jpg" alt="user image">
-                            </div> -->
+                            </div>
                             <!-- for username -->
                             <div class="username">
                                 <p>Lee</p>
@@ -944,9 +944,9 @@
                     <td>
                         <div class="username-container">
                             <!-- for image -->
-                            <!-- <div class="image-container">
+                            <div class="image-container">
                                 <img src="/images/lee.jpg" alt="user image">
-                            </div> -->
+                            </div>
                             <!-- for username -->
                             <div class="username">
                                 <p>Lee</p>
